<resources>
    <string name="app_name">SRI simulation</string>
    <string name="search_tokens">Search tokens :</string>
    <string name="params">Params</string>
    <string name="classic">Classic</string>
    <string name="clip_by_spaces">clip by spaces</string>
    <string name="clip_by_all_special_char">clip by all special char</string>
    <string name="ignore_char">ignore \'-\' char</string>
    <string name="trim_words_so_it_has_only_7_char">trim words so it has only 7 char</string>
    <string name="search">Search …</string>
    <string name="ignore_case">ignore case</string>
    <string name="delete_mot_vide">Delete \'mot vide\'</string>
    <string name="performance">Performance</string>
    <string name="precision">precision =</string>
    <string name="nc">= NC</string>
    <string name="_nc">NC</string>
    <string name="rappel">rappel =</string>
    <string name="nc1">= NC</string>
    <string name="bruit">bruit =</string>
    <string name="eq">=</string>
    <string name="_1">1 -</string>
    <string name="silence">silence =</string>
    <string name="total_docs">"Total docs : "</string>
    <string name="lexical_analyses">lexical-analyses:</string>
    <string name="normalisation_la_racinisation">Normalisation (la racinisation): </string>
    <string name="n_gram_algo_n_2">n-gram algo (n=2, threshold= </string>
</resources>